opam-version: "2.0"
name:         "unstrctrd"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/unstrctrd"
bug-reports:  "https://github.com/dinosaure/unstrctrd/issues"
dev-repo:     "git+https://github.com/dinosaure/unstrctrd.git"
doc:          "https://dinosaure.github.io/unstrctrd/"
license:      "MIT"
synopsis:     "Unstructured parser"
description: """Fast and compliant Unstructured parser
"""

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"      {>= "4.07.0"}
  "dune"
  "uutf"
  "fmt"
  "angstrom" {>= "0.11.0"}
]
